Correction  Saut de ligne version mobile

--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -28,7 +28,7 @@
 
 
         & h1 {
-            position: relative;
+
                 font-size: 48px;
                 color: $secondarycolor;
 
@@ -53,7 +53,6 @@
                 height: 200px;
 
                 & h1 {
-                    padding: 0 10px;
                     font-size: 34px;
 
                 }
@@ -70,22 +69,31 @@
 
     .banner-container {
         width: 100%;
-        height: 111px;
+        max-height: 111px;
 
 
 
         &__img {
-            height: 111px;
+           max-height: 111px;
         }
 
         &__title {
             height: 111px;
 
             & h1 {
+                padding: 0 20px;
                 font-size: 24px;
 
             }
         }
 
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .banner-container {
+        &__title {
+            justify-content: flex-start;
+        }
     }
 }
